# ft_ls

./: CMakeLists.txt  Makefile  README.md  a.out  a_out  comparators.c  ft_ls  ls_out  ls_sort.c  main.c  print.c
includes/: ft_ls.h  ft_ls.h.gch
libft/: libft.h.gch
libft/ft_base_funcs/: ft_strjoin.c
