cmake_minimum_required(VERSION 3.14)
project(ft_ls C)

set(CMAKE_C_STANDARD 11)

include_directories(libft)

add_executable(ft_ls
        libft/ft_base_funcs/ft_atoi.c
        libft/ft_base_funcs/ft_bzero.c
        libft/ft_base_funcs/ft_isalnum.c
        libft/ft_base_funcs/ft_isalpha.c
        libft/ft_base_funcs/ft_isascii.c
        libft/ft_base_funcs/ft_isdigit.c
        libft/ft_base_funcs/ft_isprint.c
        libft/ft_base_funcs/ft_isspace.c
        libft/ft_base_funcs/ft_itoa.c
        libft/ft_base_funcs/ft_lstadd.c
        libft/ft_base_funcs/ft_lstdel.c
        libft/ft_base_funcs/ft_lstdelone.c
        libft/ft_base_funcs/ft_lstiter.c
        libft/ft_base_funcs/ft_lstmap.c
        libft/ft_base_funcs/ft_lstnew.c
        libft/ft_base_funcs/ft_memalloc.c
        libft/ft_base_funcs/ft_memccpy.c
        libft/ft_base_funcs/ft_memchr.c
        libft/ft_base_funcs/ft_memcmp.c
        libft/ft_base_funcs/ft_memcpy.c
        libft/ft_base_funcs/ft_memdel.c
        libft/ft_base_funcs/ft_memmove.c
        libft/ft_base_funcs/ft_memset.c
        libft/ft_base_funcs/ft_putchar.c
        libft/ft_base_funcs/ft_putchar_fd.c
        libft/ft_base_funcs/ft_putendl.c
        libft/ft_base_funcs/ft_putendl_fd.c
        libft/ft_base_funcs/ft_putnbr.c
        libft/ft_base_funcs/ft_putnbr_fd.c
        libft/ft_base_funcs/ft_putstr.c
        libft/ft_base_funcs/ft_putstr_fd.c
        libft/ft_base_funcs/ft_strcat.c
        libft/ft_base_funcs/ft_strchr.c
        libft/ft_base_funcs/ft_strclr.c
        libft/ft_base_funcs/ft_strcmp.c
        libft/ft_base_funcs/ft_strcpy.c
        libft/ft_base_funcs/ft_strdel.c
        libft/ft_base_funcs/ft_strdup.c
        libft/ft_base_funcs/ft_strequ.c
        libft/ft_base_funcs/ft_striter.c
        libft/ft_base_funcs/ft_striteri.c
        libft/ft_base_funcs/ft_strjoin.c
        libft/ft_base_funcs/ft_strlcat.c
        libft/ft_base_funcs/ft_strlen.c
        libft/ft_base_funcs/ft_strmap.c
        libft/ft_base_funcs/ft_strmapi.c
        libft/ft_base_funcs/ft_strncat.c
        libft/ft_base_funcs/ft_strncmp.c
        libft/ft_base_funcs/ft_strncpy.c
        libft/ft_base_funcs/ft_strnequ.c
        libft/ft_base_funcs/ft_strnew.c
        libft/ft_base_funcs/ft_strnstr.c
        libft/ft_base_funcs/ft_strrchr.c
        libft/ft_base_funcs/ft_strsplit.c
        libft/ft_base_funcs/ft_strstr.c
        libft/ft_base_funcs/ft_strsub.c
        libft/ft_base_funcs/ft_strtrim.c
        libft/ft_base_funcs/ft_tolower.c
        libft/ft_base_funcs/ft_toupper.c
        libft/ft_extra_funcs/ft_abs.c
        libft/ft_extra_funcs/ft_get.c
        libft/ft_extra_funcs/ft_islower.c
        libft/ft_extra_funcs/ft_isupper.c
        libft/ft_extra_funcs/ft_itoa_base.c
        libft/ft_extra_funcs/ft_max.c
        libft/ft_extra_funcs/ft_memsetloc.c
        libft/ft_extra_funcs/ft_nmult.c
        libft/ft_extra_funcs/ft_nsize.c
        libft/ft_extra_funcs/ft_pow.c
        libft/ft_extra_funcs/ft_strerase.c
        libft/ft_extra_funcs/ft_strfchr.c
        libft/ft_extra_funcs/ft_strjoinfree.c
        libft/ft_extra_funcs/ft_strrev.c
        libft/ft_long_math/ft_long.c
        libft/ft_long_math/ft_long_diff.c
        libft/ft_long_math/ft_long_div.c
        libft/ft_long_math/ft_long_mult.c
        libft/ft_long_math/ft_long_sum.c
        libft/ft_long_math/ft_long_utils.c
        libft/ft_long_math/ft_make_nline.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/parsers.c
        libft/ft_printf/utilities.c
        libft/get_next_line/get_next_line.c
        libft/libft.h main.c includes/ft_ls.h ls_sort.c comparators.c print.c)
